# inference_results_v3.1

./: README.md
.github/: pull_request_template.md
closed/ASUSTeK/: Makefile.build  Makefile.submission
closed/ASUSTeK/code/: __init__.py
closed/ASUSTeK/docker/: Dockerfile.x86_64
closed/ASUSTeK/documentation/: submission_guide.md
closed/ASUSTeK/power/: server-template-linux.cfg
closed/ASUSTeK/scripts/: ft-build.aarch64.patch
closed/ASUSTeK/systems/: ESC4000A_E12_L4x8_TRT.json  H100_PCIe_80GBx8_TRT.json
closed/Azure/: Makefile.const  Makefile.docker  README.md
closed/Azure/docker/: Dockerfile.x86_64  requirements.x86_64.1.txt
closed/Azure/results/: submission_checker_log.txt
closed/Azure/scripts/: trtllm-build.aarch64.patch
closed/Azure/systems/: ND_H100_v5_TRT.json  system_descriptions.tsv
closed/CTuning/: calibration.md
closed/CTuning/code/: README.md
closed/CTuning/systems/: 51535c5ae107-reference-cpu-ncnn-vdefault-default_config.json  51535c5ae107-reference-gpu-onnxruntime-v1.15.1-default_config.json  amd_ryzen_workstation-cpp-cpu-onnxruntime-vdefault-default_config.json  amd_ryzen_workstation-cpp-gpu-onnxruntime-vdefault-default_config.json  amd_ryzen_workstation-reference-cpu-onnxruntime-v1.15.1-default_config.json  amd_ryzen_workstation-reference-cpu-pytorch-v1.13.1-default_config.json  amd_ryzen_workstation-reference-cpu-pytorch-v2.0.1-default_config.json  amd_ryzen_workstation-reference-cpu-tf-v2.12.0-default_config.json  amd_ryzen_workstation-reference-cpu-tf-v2.13.0-default_config.json  amd_ryzen_workstation-reference-gpu-onnxruntime-v1.14.0-default_config.json  amd_ryzen_workstation-reference-gpu-onnxruntime-v1.15.1-default_config.json  amd_ryzen_workstation-reference-gpu-pytorch-v2.0.1-default_config.json  amd_ryzen_workstation-reference-gpu-tf-v2.12.0-default_config.json  amd_ryzen_workstation-reference-gpu-tf-v2.13.0-default_config.json  amd_ryzen_workstation-tflite_cpp-cpu-tflite-vmaster-default_config.json  amd_ryzen_workstation-tflite_cpp-cpu-tflite-vmaster-with_live_preprocessing.json  amd_ryzen_workstation_triton-nvidia_original-gpu-tensorrt-vdefault-using_triton.json  amd_zen4_workstation-nvidia_original-gpu-tensorrt-vdefault-default_config.json  amd_zen4_workstation-reference-cpu-ncnn-vdefault-default_config.json  amd_zen4_workstation-reference-cpu-onnxruntime-v1.14.0-default_config.json  amd_zen4_workstation-reference-cpu-tf-v2.12.0-default_config.json  aws_g4dn.xlarge-nvidia_original-gpu-tensorrt-vdefault-default_config.json  aws_g4dn.xlarge-reference-cpu-onnxruntime-v1.15.1-default_config.json  aws_g4dn.xlarge-reference-cpu-tf-v2.13.0-default_config.json  aws_g4dn.xlarge-reference-gpu-onnxruntime-v1.15.1-default_config.json  aws_g4dn.xlarge-reference-gpu-tf-v2.13.0-default_config.json  aws_g4dn.xlarge-tflite_cpp-cpu-tflite-vmaster-default_config.json  aws_inf2.xlarge-reference-cpu-onnxruntime-v1.15.1-default_config.json  aws_t4-reference-cpu-tf-v2.13.0-default_config.json  (+23 more)
closed/ConnectTechInc/: Makefile  Makefile.build  Makefile.const  Makefile.docker  Makefile.power  Makefile.submission  README.md  README_Jetson.md
closed/Dell/: Makefile.const  Makefile.docker  Makefile.submission  README.md  README_NVIDIA.md  README_NVIDIA_Jetson.md  calibration_intel.md  calibration_nvidia.md  calibration_qualcomm.md
closed/Fujitsu/: Makefile.build  Makefile.const  Makefile.docker  README.md  summary.csv
closed/GigaComputing/: Makefile.const  Makefile.data  Makefile.docker  Makefile.submission  README.md  summary.csv
closed/Google/: calibration.md
closed/H3C/: Makefile.build  Makefile.const  Makefile.docker  README.md
closed/HPE/: Makefile.build  Makefile.data  Makefile.docker  README.md  calibration-intel.md  calibration-nvidia.md  calibration_qualcomm.md
closed/HPE/docker/: Dockerfile.aarch64  pyproject.toml  requirements.aarch64.1.txt  requirements.aarch64.2.txt
closed/IEI/: Makefile  Makefile.build  Makefile.const  Makefile.data  Makefile.docker  Makefile.power  Makefile.submission  Makefile.tests  README.md  VERSION  attributions.txt  calibration.md
closed/Intel-HabanaLabs/: calibration.md
closed/Krai/: calibration_krai.md  calibration_qualcomm.md
closed/Lenovo/: calibration_qualcomm.md
closed/NVIDIA/: Makefile.build  Makefile.const  Makefile.docker  Makefile.power  Makefile.submission  README.md  README_Jetson.md
closed/Nutanix/: Makefile  Makefile.build  Makefile.submission  README.md
closed/Oracle/: Makefile.build  Makefile.const  Makefile.data  Makefile.docker  Makefile.power  Makefile.submission  README.md  compliance_checker_log.txt  summary.csv
closed/Qualcomm/: calibration.md
closed/Quanta_Cloud_Technology/code/plugin/NMSPVAPlugin/: CMakeLists.txt
closed/SiMa/code/resnet50/palette/src/loadgen_plugin/imagenet/: CMakeLists.txt  imagenet_data.cc  imagenet_data.h
closed/SiMa/code/resnet50/palette/src/loadgen_plugin/loadgen/: CMakeLists.txt  loadgen_plugin.cc  loadgen_plugin.h
closed/Supermicro/: Makefile  Makefile.const  Makefile.docker  Makefile.submission  README.md  README_Jetson.md
closed/TTA/: README.md  calibration.md
closed/xFusion/: Makefile.build  Makefile.build.rej  Makefile.const  Makefile.docker  Makefile.submission  README.md
open/CTuning/: calibration.md
open/Dell/: README.md
open/Moffett/: calibration.md
open/Moffett/code/harness/: CMakeLists.txt
open/Moffett/code/harness/common/: harness_flags.hpp  syncqueue.h  utils.hpp
open/Moffett/code/harness/harness_default/: main_default.cpp
open/Moffett/code/harness/harness_gptj/: main_gptj.cpp
open/Moffett/code/harness/spu_backend/: CMakeLists.txt
open/Moffett/code/harness/spu_backend/include/: device.h  device_gptj.h  engine_llm.h  engine_llm_gptj.h  llm_utils.h  model_executor.h  numa.h  samples_loader.h  server.h
open/Moffett/code/harness/spu_backend/src/: device.cpp  device_gptj.cpp  mf_sola.cpp  model_executor.cpp  numa.cpp  server.cpp
open/NVIDIA/: Makefile  Makefile.build  Makefile.const  Makefile.data  Makefile.docker  Makefile.submission  README.md
open/NeuralMagic/: README.md  calibration.md
(+38791 files in other folders)
