[tool.poetry]
name = "MLPerf-Inference"
version = "0.1.0"
description = ""
authors = ["MLPerf-Inference"]

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "0.12.0"
appdirs = "1.4.4"
astunparse = "1.6.3"
attrs = "21.2.0"
audioread = "2.1.9"
batchgenerators = "0.21"
beautifulsoup4 = "4.9.3"
boto3 = "1.17.76"
botocore = "1.20.76"
bs4 = "0.0.1"
cachetools = "4.2.2"
certifi = "2022.12.7"
cffi = "1.14.5"
chardet = "4.0.0"
click = "8.0.1"
cmake = "3.18.4"
cuda-python = "12.1.0"
cycler = "0.10.0"
Cython = "0.29.23"
datasets = "2.12.0"
decorator = "4.4.2"
dicom2nifti = "2.2.12"
dill = "0.3.6"
distlib = "0.3.1"
et-xmlfile = "1.1.0"
evaluate = "0.4.0"
filelock = "3.0.12"
flatbuffers = "1.12"
fsspec = "2023.4.0"
future = "0.18.3"
google-auth = "1.30.0"
google-auth-oauthlib = "0.4.4"
google-pasta = "0.2.0"
grpcio = "1.34.1"
h5py = "3.1.0"
huggingface-hub = "0.14.1"
idna = "2.10"
imageio = "2.9.0"
inflect = "4.1.0"
iniconfig = "1.1.1"
jdcal = "1.4.1"
jmespath = "0.10.0"
joblib = "1.2.0"
keras-nightly = "2.5.0.dev2021032900"
Keras-Preprocessing = "1.1.2"
kiwisolver = "1.3.1"
librosa = "0.8.0"
linecache2 = "1.0.0"
Mako = "1.2.2"
Markdown = "3.3.4"
MarkupSafe = "2.1.1"
matplotlib = "3.4.2"
MedPy = "0.4.0"
networkx = "2.5.1"
nibabel = "3.2.1"
nltk = "3.8.1"
numpy = "1.22.3"
nvidia-pyindex = "1.0.8"
oauthlib = "3.1.0"
onnx = "1.13.1"
onnxruntime-gpu = "1.13.1"
opencv-python-headless = "4.7.0.72"
openpyxl = "3.0.4"
opt-einsum = "3.3.0"
packaging = "20.9"
Pillow = "9.4.0"
pluggy = "0.13.1"
pooch = "1.3.0"
protobuf = "3.20.2"
py = "1.11.0"
pyarrow = "12.0.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.20"
pycuda = "2022.2.2"
pydicom = "2.1.2"
Pygments = "2.15.1"
pyparsing = "2.4.7"
pytest = "6.2.4"
pytest-html = "3.2.0"
python-dateutil = "2.8.1"
pytools = "2021.2.6"
pytz = "2021.1"
PyVISA = "1.11.3"
PyVISA-py = "0.5.2"
PyWavelets = "1.1.1"
PyYAML = "6.0b1"
regex = "2023.5.5"
responses = "0.18.0"
requests = "2.25.1"
requests-oauthlib = "1.3.0"
resampy = "0.2.2"
rouge-score = "0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
